# FluffyBot

./: Cargo.toml  README.md  config.json
src/: config.json  config.rs  history.rs  main.rs  parse.rs  request.rs  webhook.rs
