[package]
name = "bot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"]}
tokio = { version = "1.37", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
select = "0.6"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
panic = "abort"